<resources>
    <string name="app_name">testing</string>
    <string name="product_name">nama_produk</string>
    <string name="product_status">status_produk</string>
    <string name="product_price">Rp99.999.999</string>
    <string name="product_selling_unit">unit_produk</string>
    <string name="product_category">kategori_produk</string>
    <string name="product_desc">deskripsi_produk</string>
    <string name="product_general_indication">indikasi_produk</string>
    <string name="product_composition">komposisi_produk</string>
    <string name="product_dosage">dosis_produk</string>
    <string name="product_how_to_use">aturan_pakai_produk</string>
    <string name="product_warning">peringatan_produk</string>
    <string name="product_side_effects">efek_samping_produk</string>
    <string name="product_manufacturer">manufaktur_produk</string>
    <string name="product_bpom_number">no_bpom_produk</string>
    <string name="cart_select_all">Pilih Semua</string>
    <string name="cart_total_price_text">Total Harga</string>
    <string name="cart_checkout_text">Beli (0)</string>
    <string name="cart_title">Keranjang</string>
    <string name="item_cart_notes">Tulis Catatan</string>
    <string name="item_cart_decrement">-</string>
    <string name="item_cart_default_quantity">1</string>
    <string name="item_detail_add_to_cart_text">Tambahkan ke Keranjang</string>
    <string name="item_detail_additional_info">Detail Produk</string>
    <string name="item_detail_category_info">Kategori</string>
    <string name="item_detail_desc_info">Deskripsi</string>
    <string name="item_detail_general_indication_info">Indikasi Umum</string>
    <string name="item_detail_composition_info">Komposisi</string>
    <string name="item_detail_dosage_info">Dosis Pemakaian</string>
    <string name="item_detail_how_to_use_info">Aturan Pakai</string>
    <string name="item_detail_warning_info">Peringatan</string>
    <string name="item_detail_side_effects_info">Efek Samping</string>
    <string name="item_detail_manufacturer_info">Manufaktur</string>
    <string name="item_detail_bpom_number_info">No. Registrasi</string>
    <string name="menu_cart_title">Shopping Cart</string>
    <string name="botnav_home_title">Home</string>
    <string name="botnav_profile_title">Profile</string>
    <string name="botnav_wishlist_title">Wishlist</string>
    <string name="user_name">nama_user</string>
    <string name="user_email">email_user</string>
    <string name="profile_children_label">Label</string>
    <string name="profile_item_name">nama_item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_login_greeting_title">Masuk</string>
    <string name="tv_login_greeting_subtitle">Nikmati layanan kami dengan gratis</string>
    <string name="tv_login_forgot_pass_label">Lupa kata sandi?</string>
    <string name="tv_login_footer_label">Belum memiliki akun?</string>
    <string name="tv_login_footer_register">Daftar sekarang</string>
    <string name="tv_register_greeting_title">Daftar</string>
    <string name="tv_register_greeting_subtitle">Buat akun dengan mengisi data dibawah</string>
    <string name="tv_register_name_label">Nama</string>
    <string name="tv_register_email_label">Email</string>
    <string name="tv_register_pass_label">Kata sandi</string>
    <string name="tv_register_conf_pass_label">Konfirmasi kata sandi</string>
    <string name="et_register_name_hint">Masukkan nama</string>
    <string name="et_register_email_hint">Masukkan Email</string>
    <string name="et_register_pass_hint">Masukkan kata sandi</string>
    <string name="et_register_conf_pass_hint">Masukkan ulang kata sandi</string>
    <string name="btn_register_label">Daftar</string>
    <string name="tv_register_footer_label">Sudah memiliki akun?</string>
    <string name="tv_register_footer_login">Masuk</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa cupiditate deserunt dolor dolorum ducimus, eligendi esse est expedita itaque laboriosam libero neque perferendis quidem sint, temporibus tenetur ut. Consequatur, culpa.</string>
</resources>