<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/botnav_home_title"
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_state_selector"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:title="@string/botnav_wishlist_title"
        android:id="@+id/wishlistFragment"
        android:icon="@drawable/wishlist_state_selector"
        app:showAsAction="always|collapseActionView"/>

    <item
        android:title="@string/botnav_profile_title"
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile_state_selector"
        app:showAsAction="always|collapseActionView"/>

</menu>