<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.detail.ItemDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/item_detail_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/item_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back">

            <TextView
                android:id="@+id/item_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:maxLines="1"
                android:ellipsize="end"
                android:fontFamily="@font/epilogue_semibold_600"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_placeholder_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/item_detail_appbar"
        app:layout_constraintBottom_toTopOf="@id/item_detail_add_to_cart_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shimmer_duration="500">

        <include layout="@layout/shimmer_detail_loading"/>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <ScrollView
        android:id="@+id/item_detail_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/item_detail_appbar"
        app:layout_constraintBottom_toTopOf="@id/item_detail_add_to_cart_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/item_detail_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ic_image_placeholder"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/item_detail_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_price"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/epilogue_semibold_600"/>

                    <TextView
                        android:id="@+id/item_detail_selling_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/product_selling_unit"
                        android:textSize="17sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/epilogue_regular_400"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/item_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/product_name"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:lineSpacingMultiplier="1.2"
                    android:fontFamily="@font/epilogue_regular_400"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/grey_1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_detail_additional_info"
                    android:textSize="20sp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/epilogue_semibold_600"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/item_detail_category_info"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/epilogue_semibold_600"/>

                <TextView
                    android:id="@+id/item_detail_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/product_category"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/epilogue_regular_400"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/item_detail_desc_info"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/epilogue_semibold_600"/>

                <TextView
                    android:id="@+id/item_detail_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/product_desc"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:lineSpacingMultiplier="1.2"
                    android:fontFamily="@font/epilogue_regular_400"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/item_detail_general_indication_info"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/epilogue_semibold_600"/>

                <TextView
                    android:id="@+id/item_detail_general_indication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/product_general_indication"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:lineSpacingMultiplier="1.2"
                    android:fontFamily="@font/epilogue_regular_400"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/item_detail_composition_info"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/epilogue_semibold_600"/>

                <TextView
                    android:id="@+id/item_detail_composition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/product_composition"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:lineSpacingMultiplier="1.2"
                    android:fontFamily="@font/epilogue_regular_400"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/item_detail_dosage_info"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/epilogue_semibold_600"/>

                <TextView
                    android:id="@+id/item_detail_dosage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/product_dosage"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/epilogue_regular_400"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/item_detail_how_to_use_info"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/epilogue_semibold_600"/>

                <TextView
                    android:id="@+id/item_detail_how_to_use"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/product_how_to_use"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:lineSpacingMultiplier="1.2"
                    android:fontFamily="@font/epilogue_regular_400"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/item_detail_warning_info"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/epilogue_semibold_600"/>

                <TextView
                    android:id="@+id/item_detail_warning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/product_warning"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:lineSpacingMultiplier="1.2"
                    android:fontFamily="@font/epilogue_regular_400"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/item_detail_side_effects_info"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/epilogue_semibold_600"/>

                <TextView
                    android:id="@+id/item_detail_side_effects"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/product_side_effects"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:lineSpacingMultiplier="1.2"
                    android:fontFamily="@font/epilogue_regular_400"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/item_detail_manufacturer_info"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/epilogue_semibold_600"/>

                <TextView
                    android:id="@+id/item_detail_manufacturer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/product_manufacturer"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/epilogue_regular_400"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/item_detail_bpom_number_info"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/epilogue_semibold_600"/>

                <TextView
                    android:id="@+id/item_detail_bpom_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/product_bpom_number"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/epilogue_regular_400"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/item_detail_add_to_cart_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/item_detail_btn_add_to_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/item_detail_add_to_cart_text"
            android:textSize="17sp"
            android:fontFamily="@font/epilogue_semibold_600"
            android:textAllCaps="false"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>