<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.login.LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_login_greeting_title"
        android:textSize="20sp"
        android:textColor="@color/midnight_green"
        android:fontFamily="@font/epilogue_bold_700"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/tv_login_greeting_subtitle"
        android:textSize="16sp"
        android:textColor="@color/midnight_green"
        android:fontFamily="@font/epilogue_regular_400"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_register_email_label"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        android:fontFamily="@font/barlow_medium"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:boxStrokeColor="@color/dark_gray"
        app:boxStrokeErrorColor="@color/red"
        app:errorEnabled="false"
        app:errorTextColor="@color/red"
        app:errorIconDrawable="@null"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/et_register_email_hint"
            android:background="@drawable/bg_et_rounded"
            android:fontFamily="@font/barlow_medium"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="14sp"
            android:textColor="@color/dark_gray"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tv_register_pass_label"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        android:fontFamily="@font/barlow_medium"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_pass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:boxStrokeColor="@color/dark_gray"
        app:boxStrokeErrorColor="@color/red"
        app:errorEnabled="false"
        app:errorTextColor="@color/red"
        app:errorIconDrawable="@null"
        app:hintEnabled="false"
        app:passwordToggleDrawable="@drawable/selector_eye_state"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/dark_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_pass"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/et_register_pass_hint"
            android:background="@drawable/bg_et_rounded"
            android:fontFamily="@font/barlow_medium"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:longClickable="false"
            android:textIsSelectable="false"
            android:padding="10dp"
            android:textSize="14sp"
            android:textColor="@color/dark_gray"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_login_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/barlow_bold"
        android:text="@string/tv_login_forgot_pass_label"
        android:textColor="@color/midnight_green"
        android:textSize="14sp" />
    
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/french_gray"
        android:padding="10dp"
        android:enabled="false"
        android:text="@string/tv_login_greeting_title"
        android:textSize="16sp"
        android:textColor="@color/midnight_green"
        android:textAllCaps="false"
        android:fontFamily="@font/epilogue_bold_700"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_login_footer_label"
            android:textSize="14sp"
            android:textColor="@color/dark_gray"
            android:fontFamily="@font/barlow_medium"/>

        <TextView
            android:id="@+id/tv_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/tv_login_footer_register"
            android:textSize="14sp"
            android:textColor="@color/dark_gray"
            android:fontFamily="@font/barlow_bold"/>

    </LinearLayout>

</LinearLayout>