<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.cart.ShoppingCartActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/cart_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/cart_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_title"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:fontFamily="@font/epilogue_semibold_600"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/cart_select_all_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/cart_appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <CheckBox
            android:id="@+id/cart_cb_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/epilogue_regular_400"
            android:padding="5dp"
            android:text="@string/cart_select_all"
            android:textColor="@color/black"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/cart_rv_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/cart_select_all_container"
        app:layout_constraintBottom_toTopOf="@id/cart_checkout_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:listitem="@layout/rv_cart" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/cart_checkout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/epilogue_regular_400"
                android:text="@string/cart_total_price_text"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/cart_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/product_price"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:fontFamily="@font/epilogue_semibold_600"/>

        </LinearLayout>

        <View
            android:layout_width="170dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/cart_btn_checkout"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/cart_checkout_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="@color/green_1"
            android:fontFamily="@font/epilogue_semibold_600"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>